added sound, and animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
         <button id="startknap">START</button>
     </div>
 
+    <!--    Lyd         -->
+    <audio id="vingebask_sound" src="lyde/vingebask.mp3">
+        Your browser does not support the audio element.
+    </audio>
+    <audio id="sms_sound" src="lyde/sms_sound.mp3">
+        Your browser does not support the audio element.
+    </audio>
 
+
+    <!--    Lyd Slut    -->
 
 
     <div id="scene">
@@ -23,6 +32,9 @@
         <div id="sky3"></div>
         <div id="forgrund"></div>
         <div id="kanin"></div>
+        <div id="fugl" class="fugl_flyver"></div>
+        <div id="eva" class="eva_sprite"></div>
+
 
     </div>
 
