funktion til syndflod

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <div id="fugl" class="fugl_flyver"></div>
         <div id="eva" class="eva_sprite"></div>
 
+        <div id="flod" class="flod_hide"></div>
+
 
     </div>
 
